bundle/downstream/manifests/quay-bridge-operator-webhook-service_v1_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: quay-bridge-operator-webhook-service
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    control-plane: controller-manager
status:
  loadBalancer: {}
