bundle/downstream/manifests/quay-bridge-operator-quay-bridge-operator-netpol_networking.k8s.io_v1_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quay-bridge-operator-quay-bridge-operator-netpol
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
  - ports:
    - port: 443
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          name: openshift-monitoring
  - ports:
    - port: 443
      protocol: TCP
    - port: 80
      protocol: TCP
    to: []
  - ports:
    - port: 443
      protocol: TCP
    to: []
  - ports:
    - port: 8081
      protocol: TCP
    - port: 9443
      protocol: TCP
    - port: 8443
      protocol: TCP
    to:
    - namespaceSelector: {}
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to: []
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kube-system
    ports:
    - port: 8081
      protocol: TCP
    - port: 9443
      protocol: TCP
    - port: 8443
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          name: openshift-monitoring
    ports:
    - port: 8443
      protocol: TCP
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8081
      protocol: TCP
    - port: 9443
      protocol: TCP
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      name: quay-bridge-operator
  policyTypes:
  - Ingress
  - Egress
